# cube-solver

./: .gitignore  CHANGELOG.md  README.md  Setup.hs  cube-solver.cabal
app/: BluetoothCube.hs  CFOP.hs  Cube.hs  CubeParser.hs  CubeSolverServer.hs  CubeSolverTest.hs  CubeState.hs  CubeValidator.hs  Main.hs  PDFCube.hs  Test.hs  TestOld.hs  Triggers.hs
app/CFOP/: CFOP.hs  Cross.hs  F2L.hs  OLL.hs  PLL.hs
app/bluetooth/: index.js
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: AlgExpr.hs  BluetoothCube.hs  Cube.hs  CubeParser.hs  CubeState.hs  CubeValidator.hs  MoveExpr.hs  PDFCube.hs  Triggers.hs
src/CFOP/: Cross.hs  F2L.hs  OLL.hs  PLL.hs
src/bluetooth/: package-lock.json  package.json
test/: CubeSolverTest.hs
