cabal-version:      3.0

name:               cube-solver

version:            0.1.0.0

synopsis:        Rubik's cube solver

-- A longer description of the package.
-- description:

license:            BSD-3-Clause
license-file:       LICENSE

author:             Vebjørn Øiestad
maintainer:         vebjorn.oiestad@gmail.com

build-type:         Simple

extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable cube-solver
    import:           warnings

    main-is:          Main.hs

    other-modules:    Cube,
                      CubeState,
                      CubeParser,
                      CubeValidator,
                      CFOP.CFOP,
                      CFOP.PLL,
                      CFOP.OLL,
                      CFOP.F2L,
                      CFOP.Cross,
                      Triggers,
                      PDFCube,
                      TestOld

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:    base ^>=4.17.2.1,
                      mtl,
                      text,
                      megaparsec,
                      directory,
                      HPDF

    hs-source-dirs:   app

    default-language: Haskell2010

test-suite cube-solver-tests
    type:             detailed-0.9
    test-module:      CubeSolverTest
    build-depends:    base ^>=4.17.2.1, Cabal >= 3.0
    hs-source-dirs:   app
    default-language: Haskell2010
