cabal-version:      3.0

name:               cube-solver

version:            0.1.0.0

synopsis:        Rubik's cube solver

-- description:

license:            BSD-3-Clause
license-file:       LICENSE

author:             Vebjørn Øiestad

build-type:         Custom

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable cube-solver
    import:           warnings

    main-is:          Main.hs

    other-modules:    Cube,
                      CubeState,
                      CubeParser,
                      CubeValidator,
                      CFOP.CFOP,
                      CFOP.PLL,
                      CFOP.OLL,
                      CFOP.F2L,
                      CFOP.Cross,
                      Triggers,
                      PDFCube,
                      BluetoothCube,
                      CubeSolverServer

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:    base ^>=4.17.2.1,
                      mtl,
                      text,
                      megaparsec,
                      HPDF,
                      process,
                      time,
                      options,
                      servant,
                      servant-server,
                      wai,
                      warp,
                      bytestring

    hs-source-dirs:   app

    default-language: Haskell2010

test-suite cube-solver-tests
    type:             exitcode-stdio-1.0
    main-is:          CubeSolverTest.hs
    build-depends:    base ^>=4.17.2.1, 
                      Cabal >= 3.0,
                      QuickCheck,
                      mtl,
                      text,
                      megaparsec

    other-modules:    Cube,
                      CubeState,
                      CubeParser,
                      CubeValidator,
                      CFOP.CFOP,
                      CFOP.PLL,
                      CFOP.OLL,
                      CFOP.F2L,
                      CFOP.Cross,
                      Triggers

    hs-source-dirs:   app
    default-language: Haskell2010


custom-setup
    setup-depends:    base ^>=4.17.2.1, 
                      Cabal >= 3.0,
                      process
